--- a/scss/component/_index.scss
+++ b/scss/component/_index.scss
@@ -1,2 +1,6 @@
 @forward "./button";
 @forward "./destination-card";
+@forward "./navtab";
+@forward "./blog-card";
+@forward "./form-search";
+@forward "./seperator";
