--- a/scss/component/_button.scss
+++ b/scss/component/_button.scss
@@ -11,6 +11,7 @@
     line-height: 1.67; /* 166.667% */
     border-radius: 60px;
     background: var(--orange-primary, #FF5B26);
+    padding: 15px 35px;
     
 
     &__signup{
