--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1088,6 +1088,12 @@ table {
   box-sizing: border-box;
 }
 
+:root {
+  --font-color:#191B1D;
+  --desc-color:#4E5358;
+  --main-color:#FF5B26;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -1222,6 +1228,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 .btn-cta:hover {
   opacity: 0.8;
+}
+.btn-signin {
+  width: 100%;
+  margin-bottom: 20px;
 }
 
 .destination-card {
@@ -1808,6 +1818,100 @@ h1, h2, h3, h4, h5, h6 {
   list-style-type: disc;
   padding-left: 20px;
   margin-top: 8px;
+}
+
+.signin {
+  padding-top: 158px;
+  padding-bottom: 70px;
+}
+.signin__media {
+  display: flex;
+  flex-direction: column;
+}
+.signin__img {
+  width: 570px;
+  height: 492px;
+  object-fit: cover;
+  margin-top: 48px;
+  margin-left: auto;
+}
+.signin__card {
+  margin: 0 auto;
+  width: 430px;
+  padding: 30px;
+  border-radius: 12px;
+  background: #FFF;
+  box-shadow: 0 20px 90px 0 rgba(25, 27, 29, 0.1);
+}
+.signin__heading {
+  color: var(--font-color);
+  text-align: center;
+  font-family: Syne;
+  font-size: 2.8rem;
+  font-weight: 600;
+  line-height: 1.35; /* 135.714% */
+}
+.signin__list {
+  margin-top: 30px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  justify-content: center;
+  align-items: center;
+  color: var(--desc-color);
+  text-align: center;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.75; /* 175% */
+}
+.signin__list-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+  width: 100%;
+  border-radius: 25px;
+  border: 1px solid rgba(25, 27, 29, 0.15);
+  background: #FFF;
+  padding: 11px;
+}
+.signin__list-item:hover {
+  background-color: var(--main-color);
+  color: #FFF;
+}
+.signin__link {
+  display: block;
+  color: var(--desc-color);
+  text-align: center;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.75; /* 175% */
+  margin-bottom: 20px;
+  transition: 0.5s;
+}
+.signin__link--forgot {
+  text-align: right;
+}
+.signin__link--strong {
+  color: var(--font-color);
+}
+.signin__link--forgot:hover, .signin__link--strong:hover {
+  color: var(--main-color);
+}
+.signin__input {
+  margin-bottom: 12px;
+  padding: 30px;
+  width: 100%;
+  height: 60px;
+  border-radius: 30px;
+  border: 1px solid rgba(25, 27, 29, 0.15);
+  background: #FFF;
+  text-align: left;
+  color: var(--desc-color);
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.75; /* 175% */
 }
 
 .hero {
