feat: design blog page

--- a/scss/admin/variables/_variables.scss
+++ b/scss/admin/variables/_variables.scss
@@ -32,7 +32,7 @@ $dark-transparent: rgba(0, 0, 0, 0.05);
 
 // Main Colors
 $primary: $blue !default;
-$secondary: #1a97f5 !default;
+$secondary: #6c757d !default;
 $success: $green !default;
 $info: $cyan !default;
 $warning: $yellow !default;
