--- a/template/admin/sidebar.html
+++ b/template/admin/sidebar.html
@@ -123,6 +123,18 @@
                 <iconify-icon icon="solar:menu-dots-linear" class="nav-small-cap-icon fs-4"></iconify-icon>
                 <span class="hide-menu">Catalogs</span>
             </li>
+
+            <li class="sidebar-item">
+                <a class="sidebar-link justify-content-between" href="page/admin/blog.html" aria-expanded="false">
+                    <div class="d-flex align-items-center gap-3">
+                        <span class="d-flex">
+                            <i class="ti ti-article"></i>
+                        </span>
+                        <span class="hide-menu">Blogs</span>
+                    </div>
+
+                </a>
+            </li>
     
             <li class="sidebar-item">
                 <a class="sidebar-link justify-content-between" href="page/admin/category.html" aria-expanded="false">
@@ -130,7 +142,7 @@
                         <span class="d-flex">
                             <i class="ti ti-components"></i>
                         </span>
-                        <span class="hide-menu">Category</span>
+                        <span class="hide-menu">Categories</span>
                     </div>
 
                 </a>
