--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1140,6 +1140,92 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.67; /* 166.667% */
 }
 
+.d-block {
+  display: block !important;
+}
+
+.d-flex {
+  display: flex !important;
+}
+
+.d-grid {
+  display: grid !important;
+}
+
+.d-none {
+  display: none !important;
+}
+
+@media (max-width: 1399.98px) {
+  .d-xxl-block {
+    display: block !important;
+  }
+  .d-xxl-flex {
+    display: flex !important;
+  }
+  .d-xxl-grid {
+    display: grid !important;
+  }
+  .d-xxl-none {
+    display: none !important;
+  }
+}
+@media (max-width: 1199.98px) {
+  .d-xl-block {
+    display: block !important;
+  }
+  .d-xl-flex {
+    display: flex !important;
+  }
+  .d-xl-grid {
+    display: grid !important;
+  }
+  .d-xl-none {
+    display: none !important;
+  }
+}
+@media (max-width: 991.98px) {
+  .d-lg-block {
+    display: block !important;
+  }
+  .d-lg-flex {
+    display: flex !important;
+  }
+  .d-lg-grid {
+    display: grid !important;
+  }
+  .d-lg-none {
+    display: none !important;
+  }
+}
+@media (max-width: 767.98px) {
+  .d-md-block {
+    display: block !important;
+  }
+  .d-md-flex {
+    display: flex !important;
+  }
+  .d-md-grid {
+    display: grid !important;
+  }
+  .d-md-none {
+    display: none !important;
+  }
+}
+@media (max-width: 575.98px) {
+  .d-sm-block {
+    display: block !important;
+  }
+  .d-sm-flex {
+    display: flex !important;
+  }
+  .d-sm-grid {
+    display: grid !important;
+  }
+  .d-sm-none {
+    display: none !important;
+  }
+}
 .btn {
   --search-btn-bg:#FFC200;
   color: #FFF;
@@ -1156,6 +1242,11 @@ h1, h2, h3, h4, h5, h6 {
 .btn__signup {
   padding: 8px 24px;
   width: 107px;
+}
+@media (max-width: 767.98px) {
+  .btn__signup {
+    width: 122px;
+  }
 }
 .btn-grad {
   background-image: linear-gradient(to right, #FF512F 0%, #F09819 51%, #FF512F 100%);
@@ -1421,6 +1512,12 @@ h1, h2, h3, h4, h5, h6 {
   margin: 55px 0;
 }
 
+.nav-seperator {
+  width: 100%;
+  height: 1px;
+  background-color: rgba(25, 27, 29, 0.1);
+}
+
 .detail-related__card {
   width: 370px;
 }
@@ -1479,6 +1576,16 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: space-between;
   align-items: center;
 }
+@media (max-width: 991.98px) {
+  .header__inner {
+    justify-content: flex-start;
+  }
+}
+.header .logo {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
 .header .logo img {
   width: 28px;
   height: 28px;
@@ -1488,27 +1595,23 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
   color: #333;
 }
-.header .nav ul li {
-  margin-left: 40px;
+@media (max-width: 575.98px) {
+  .header .logo {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
-.header .nav ul li:first-child {
-  margin-left: 0;
+@media (max-width: 767.98px) {
+  .header .logo {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
-.header .nav ul li a {
-  text-decoration: none;
-  color: #4E5358;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.75;
-}
-.header .nav ul li a:hover {
-  color: #ff5722;
-}
-.header .nav-list {
-  display: flex;
-  align-items: center;
-  gap: 42px;
-  padding-top: 12px;
+@media (max-width: 991.98px) {
+  .header .logo {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 .header .auth {
   display: flex;
@@ -1520,9 +1623,141 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 14px;
   color: #333;
   text-decoration: none;
+  width: 39px;
 }
 .header .auth .login:hover {
   color: #ff5722;
+}
+
+.nav {
+  margin-left: auto;
+  margin-right: auto;
+}
+@media (max-width: 991.98px) {
+  .nav {
+    position: fixed;
+    inset: 0 50% 0 0;
+    background-color: #fff;
+    z-index: 9;
+    translate: -100%;
+    transition: 0.5s;
+  }
+  .nav.show {
+    translate: 0;
+  }
+  .nav.show ~ .nav__overlay {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+@media (max-width: 767.98px) {
+  .nav {
+    inset: 0 25% 0 0;
+  }
+}
+.nav__close-btn {
+  display: none;
+}
+@media (max-width: 991.98px) {
+  .nav__close-btn {
+    display: block;
+    padding: 20px 40px;
+  }
+}
+@media (max-width: 767.98px) {
+  .nav__close-btn {
+    padding: 20px 30px;
+  }
+}
+@media (max-width: 575.98px) {
+  .nav__close-btn {
+    padding: 20px;
+  }
+}
+.nav__overlay {
+  visibility: hidden;
+  opacity: 0;
+}
+@media (max-width: 991.98px) {
+  .nav__overlay {
+    position: fixed;
+    inset: 0;
+    z-index: 8;
+    background: rgba(0, 0, 0, 0.4);
+    transition: opacity, visibility;
+    transition-duration: 0.5s;
+  }
+}
+@media (max-width: 991.98px) {
+  .nav ul li {
+    width: calc(100% - 40px);
+    margin-left: 40px;
+  }
+}
+@media (max-width: 767.98px) {
+  .nav ul li {
+    margin-left: 30px;
+  }
+}
+@media (max-width: 575.98px) {
+  .nav ul li {
+    margin-left: 20px;
+  }
+}
+.nav ul li:first-child {
+  margin-left: 0;
+}
+@media (max-width: 991.98px) {
+  .nav ul li:first-child {
+    margin-left: 40px;
+  }
+}
+@media (max-width: 767.98px) {
+  .nav ul li:first-child {
+    margin-left: 30px;
+  }
+}
+@media (max-width: 575.98px) {
+  .nav ul li:first-child {
+    margin-left: 20px;
+  }
+}
+.nav ul li a {
+  text-decoration: none;
+  color: #4E5358;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.75;
+}
+.nav ul li a:hover {
+  color: #ff5722;
+}
+.nav-list {
+  display: flex;
+  align-items: center;
+  gap: 42px;
+  padding-top: 12px;
+}
+@media (max-width: 991.98px) {
+  .nav-list {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 21px;
+  }
+}
+
+.show-on-mobile {
+  opacity: 0;
+  visibility: hidden;
+  display: none;
+}
+@media (max-width: 575.98px) {
+  .show-on-mobile {
+    display: block;
+    opacity: 1;
+    visibility: visible;
+  }
 }
 
 .footer {
@@ -1557,6 +1792,12 @@ h1, h2, h3, h4, h5, h6 {
   gap: 16px;
   margin-bottom: 34px;
 }
+@media (max-width: 575.98px) {
+  .footer .newsletter {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+}
 .footer .newsletter input {
   width: 285px;
   height: 60px;
@@ -1581,6 +1822,11 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 1.8rem;
   font-weight: 600;
   line-height: 1.67;
+}
+@media (max-width: 575.98px) {
+  .footer .newsletter button {
+    margin-right: auto;
+  }
 }
 .footer .newsletter button:hover {
   background: #e64a19;
