--- a/scss/component/_button.scss
+++ b/scss/component/_button.scss
@@ -1,3 +1,4 @@
+@use "../abstracts";
 .btn{
     --search-btn-bg:#FFC200;
 
@@ -17,6 +18,10 @@
     &__signup{
         padding: 8px 24px;
         width: 107px;
+
+        @include abstracts.screen(md){
+            width: 122px;
+        }
         
     }
 
