--- a/scss/component/_seperator.scss
+++ b/scss/component/_seperator.scss
@@ -4,3 +4,8 @@
     background-color: rgba(25, 27, 29, 0.1);
     margin: 55px 0;
 }
+.nav-seperator{
+    width: 100%;
+    height: 1px;
+    background-color: rgba(25, 27, 29, 0.1);
+}
