--- a/template/footer.html
+++ b/template/footer.html
@@ -1,9 +1,9 @@
-<div class="container">
-    <div class="row">
+<div class="footer-container">
+    <div class="footer-content">
         <!-- Booking -->
-        <div class="col-md-3 col-sm-6 footer-col">
-            <h5>Booking</h5>
-            <ul>
+        <div class="footer-column">
+            <h5 class="footer-title">Booking</h5>
+            <ul class="footer-links">
                 <li><a href="#">My Booking</a></li>
                 <li><a href="#">Submit Trip Feedback</a></li>
                 <li><a href="#">Safe Travels Hub</a></li>
@@ -14,9 +14,9 @@
         </div>
 
         <!-- Company -->
-        <div class="col-md-3 col-sm-6 footer-col">
-            <h5>Company</h5>
-            <ul>
+        <div class="footer-column">
+            <h5 class="footer-title">Company</h5>
+            <ul class="footer-links">
                 <li><a href="#!">About us</a></li>
                 <li><a href="#!">News & Blog</a></li>
                 <li><a href="#!">Press Center</a></li>
@@ -28,9 +28,9 @@
         </div>
 
         <!-- Contact -->
-        <div class="col-md-2 col-sm-6 footer-col">
-            <h5>Contact</h5>
-            <ul>
+        <div class="footer-column">
+            <h5 class="footer-title">Contact</h5>
+            <ul class="footer-links">
                 <li><a href="#!">Get in Touch</a></li>
                 <li><a href="#!">Live Chat</a></li>
                 <li><a href="#!">FAQ</a></li>
@@ -39,26 +39,26 @@
         </div>
 
         <!-- Newsletter -->
-        <div class="col-md-4 col-sm-6 footer-col">
-            <h5>Subscribe our newsletter</h5>
-            <form class="newsletter">
-                <input type="email" placeholder="Enter your email....">
-                <button type="submit">Subscribe</button>
+        <div class="footer-column newsletter-column">
+            <h5 class="footer-title">Subscribe our newsletter</h5>
+            <form class="newsletter-form">
+                <input type="email" placeholder="Enter your email" class="newsletter-input">
+                <button type="submit" class="newsletter-btn">Subscribe</button>
             </form>
 
-            <div class="social mt-3">
-                <h6>Follow us</h6>
-                <div class="icons d-flex gap-2">
-                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <div class="footer-social">
+                <h6 class="social-title">Follow us</h6>
+                <div class="social-icons">
+                    <a href="#" class="social-link facebook"></a>
+                    <a href="#" class="social-link linkedin"></a>
+                    <a href="#" class="social-link twitter"></a>
+                    <a href="#" class="social-link instagram"></a>
                 </div>
             </div>
 
-            <div class="region mt-3">
-                <label for="region" class="form-label">Change Region</label>
-                <select id="region" class="form-select">
+            <div class="footer-region">
+                <label for="region" class="region-label">Change Region</label>
+                <select id="region" class="region-select">
                     <option>Global</option>
                     <option>Asia</option>
                     <option>Europe</option>
@@ -68,8 +68,9 @@
         </div>
     </div>
 
-    <hr>
-    <div class="text-center copy">
-        Copyright © 2025 TravelBlogs Right
+    <div class="footer-bottom">
+        <div class="footer-copyright">
+            Copyright 2023 UIHUT All Rights Reserved
+        </div>
     </div>
 </div>
