--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2121,12 +2121,23 @@ h1, h2, h3, h4, h5, h6 {
   padding-top: 158px;
   padding-bottom: 70px;
 }
+@media (max-width: 767.98px) {
+  .signin {
+    padding-top: 100px;
+    padding-bottom: 10px;
+  }
+}
 .signin__media {
   display: flex;
   flex-direction: column;
 }
+@media (max-width: 991.98px) {
+  .signin__media {
+    display: none;
+  }
+}
 .signin__img {
-  width: 570px;
+  width: 492px;
   height: 492px;
   object-fit: cover;
   margin-top: 60px;
