--- a/scss/component/_detail-related-card.scss
+++ b/scss/component/_detail-related-card.scss
@@ -1,3 +1,4 @@
+@use "../abstracts";
 .detail-related__card{
     width: 370px;
     &-img{
@@ -5,10 +6,17 @@
         height: 370px;
         border-radius: 12px;
         object-fit: cover;
+
+        @include abstracts.screen(lg){
+            width: 330px;
+            height: 330px;
+            margin: 0 auto;
+        }
     }
     &-img-wrap{
         width: 370px;
         position: relative;
+        display: flex;
     }
     &-rate{
         background-color: #fff;
@@ -20,6 +28,11 @@
         right: 0;
         color: var(--font-color);
 
+        @include abstracts.screen(lg){
+            top: 5%;
+            right: 10%;
+        }
+
         font-size: 1.4rem;
         font-weight: 600;
         line-height: 1.71; /* 171.429% */
@@ -30,6 +43,7 @@
         font-weight: 400;
         line-height: 1.75; /* 175% */
         margin-top: 16px;
+        margin-left: 20px;
     }
     &-heading{
         color: var(--font-color);
@@ -40,6 +54,7 @@
         font-weight: 600;
         line-height: 1.27px; /* 127.273% */
         margin-top: 12px;
+        margin-left: 20px;
     }
 
 }
