--- a/scss/pages/_spot-detail.scss
+++ b/scss/pages/_spot-detail.scss
@@ -3,19 +3,37 @@
     padding-top: 160px;
     padding-bottom: 100px;
     background: rgba(255, 249, 229, 1);
+    @include abstracts.screen(lg){
+        padding-top: 80px;
+        padding-bottom: 50px;
+    }
     &__heading{
         margin-bottom: 18px;
         width: 589px;
         line-height: 72px;
-        @include abstracts.screen(md){
-            width: 540px;
+        @include abstracts.screen(xl){
+            width: 100%;
         }
+        
     }
     &__desc{
         margin-bottom: 70px;
         width: 570px;
+        @include abstracts.screen(xl){
+            width: 100%;
+        }
         @include abstracts.screen(md){
-            width: 300px;
+            margin-bottom: 0;
+        }
+       
+    }
+    &__media{
+        margin-bottom: 30px;
+        @include abstracts.screen(lg){
+            margin-top: 100px;
+        }
+        @include abstracts.screen(sm){
+            margin-bottom: 0px;
         }
     }
     &__img{
@@ -25,14 +43,21 @@
         object-fit: cover;
         margin-bottom: 18px;
 
+        @include abstracts.screen(lg){
+            height: 350px;
+            width: 350px;
+        }
         @include abstracts.screen(md){
+            height: 500px;
+            width: 500px;
+        }
+         @include abstracts.screen(sm){
             height: 300px;
             width: 300px;
-            object-fit: cover;
         }
     }
     &__decor{
-        @include abstracts.screen(md){
+        @include abstracts.screen(lg){
             display: none;
         }
     }
@@ -41,7 +66,6 @@
     }
     &__location{
         display: flex;
-        justify-content: center;
         width: 300px;
         align-items: center;
         gap: 20px;
@@ -51,8 +75,8 @@
     padding-top: 70px;
     padding-bottom: 150px;
 
-    @include abstracts.screen(md){
-        padding-top: 15px;
+    @include abstracts.screen(lg){
+        padding-top: 0px;
     }
     &__map{
         margin-left: 135px;
@@ -83,10 +107,27 @@
         font-weight: 400;
         line-height: 1.75;
         max-width: 570px;
-        @include abstracts.screen(md){
-            width: 300px;
+        @include abstracts.screen(lg){
+            width: 100%;
         }
     }
+    &__media{
+        @include abstracts.screen(xl){
+            margin-left: -100px;
+        }
+        @include abstracts.screen(lg){
+            margin-left: -70px;
+            margin-top: -80px;
+            margin-bottom: 30px;
+        }
+        @include abstracts.screen(md){
+            margin-left: 40px;
+        }
+        @include abstracts.screen(sm){
+            margin-left: 40px;
+        }
+    }
+    
 }
 .detail-related{
     padding-bottom: 150px;
@@ -104,8 +145,9 @@
         line-height: 1.07; /* 107.692% */
         width: 670px;
         @include abstracts.screen(md){
-            width: 377px;
+            width:100%;
         }
+
     }
     &__arrow{
         width: 12px;
